removed clunky, useless code. Using more optimized approach with question array.

--- a/index.html
+++ b/index.html
@@ -11,83 +11,29 @@
     <header class="header">
         <h1>Javascript Quiz</h1>
             <h2> Test your knowledge of the most irritating language!</h2>
+            <button id ="buttonSize">START QUIZ</button>
     </header>    
-    <div id="question-1">Question 1
+    <div class = 'questionElements hide'>Question 1
         <p>What do you need to add to your HTML page in order for your Javascript to have an affect on your webpage?</p>
-        <ul>
-            <li>
-                A. A link to the Javascript website
-            </li>
-            <li>
-                B. Javascript logo image link
-            </li>
-            <li>
-                C. A link to the relative path of your Javascript file
-            </li>
-            <li>
-                D. Add: "Javascript" to the page
-            </li>
-        </ul>      
+            <ul>
+                <li>
+                    A. A link to the Javascript website
+                </li>
+                <li>
+                    B. Javascript logo image link
+                </li>
+                <li>
+                    C. A link to the relative path of your Javascript file
+                </li>
+                <li>
+                    D. Add: "Javascript" to the page
+                </li>
+            </ul>      
     </div>   
 
-    <div class= "qa-block" id="question-2">Question 2
-        <p>What do you need to add to your HTML page in order for your Javascript to have an affect on your webpage?</p>
-        <ul>
-            <li>
-                <button class="wrong answer">A. Link to the Javascript website</button>
-            </li>
-            <li>
-                <button class="wrong answer">B. Javascript logo image link</button>
-            </li>
-            <li >
-                <button id="correct" class="answer">C. Link to the relative path of your Javascript file</button>
-            </li>
-            <li>
-                <button class="wrong answer">D. Add: "Javascript" to the page</button>
-            </li>
-        </ul> 
-        <pi id="">Correct!</p>  <p>Wrong!</p>   
-    </div> 
-    
-    <div id="question-3">Question 3
-        <p>Which of the following is a useful way to check the functionality of javascript?</p>
-        <ul>
-            <li>
-                A. console.log
-            </li>
-            <li>
-                B. print()
-            </li>
-            <li>
-                C. console.function
-            </li>
-            <li>
-                D. display.code
-            </li>
-        </ul>      
-    </div> 
-
-    <div id="question-4">Question 4
-        <p>What do you need to add to your HTML page in order for your Javascript to have an affect on your webpage?</p>
-        <ul>
-            <li>
-                A. A link to the Javascript website
-            </li>
-            <li>
-                B. Javascript logo image link
-            </li>
-            <li>
-                C. A link to the relative path of your Javascript file
-            </li>
-            <li>
-                D. Add: "Javascript" to the page
-            </li>
-        </ul>      
-    </div> 
-    <div id="hello">HELLO!</div>
-    <button id="click">click to see me</button>
+    <!-- <button id="click">click to see me</button>
     <button id="remove">click to remove</button>
-    <button id="opposite">Opposite</button>
+    <button id="opposite">Opposite</button> -->
     <script src="./assets/script.js"></script>
 </body>
 </html>
