attempted to display answers for first question

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <header class="header">
         <h1>Javascript Quiz</h1>
-            <h2> Test your knowledge of the most irritating language!</h2>
-            <button id ="buttonSize">START QUIZ</button>
+            <h2>Test your knowledge of the most irritating language!</h2>
+            <button id = "buttonSize">START QUIZ</button>
     </header>    
-    <div class = 'questionElements hide'>Question 1
-        <p>What do you need to add to your HTML page in order for your Javascript to have an affect on your webpage?</p>
+    <div class="questionElements hide">Question 1
+        <!-- <p>What do you need to add to your HTML page in order for your Javascript to have an affect on your webpage?</p>
             <ul>
                 <li>
-                    A. A link to the Javascript website
+                    <button>A. A link to the Javascript website</button>
                 </li>
                 <li>
                     B. Javascript logo image link
@@ -28,7 +28,7 @@
                 <li>
                     D. Add: "Javascript" to the page
                 </li>
-            </ul>      
+            </ul>       -->
     </div>   
 
     <!-- <button id="click">click to see me</button>
