added for loop and if statement to get questions and answers to display after a choice is clicked

--- a/index.html
+++ b/index.html
@@ -13,22 +13,11 @@
             <h2>Test your knowledge of the most irritating language!</h2>
             <button id = "buttonSize">START QUIZ</button>
     </header>    
-    <div class="questionElements hide">Question 1
-        <!-- <p>What do you need to add to your HTML page in order for your Javascript to have an affect on your webpage?</p>
-            <ul>
-                <li>
-                    <button>A. A link to the Javascript website</button>
-                </li>
-                <li>
-                    B. Javascript logo image link
-                </li>
-                <li>
-                    C. A link to the relative path of your Javascript file
-                </li>
-                <li>
-                    D. Add: "Javascript" to the page
-                </li>
-            </ul>       -->
+    <div class="questionElements hide">
+        <h1 class="qHeader"></h1>
+            <ul class="options">
+                
+            </ul>      
     </div>   
 
     <!-- <button id="click">click to see me</button>
