added display of name and score

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
     <div class="score"></div>
     <div class="results">
-        <div id="time"></div>
-        <div id="finalScore"></div>
+        <div class="time"></div>
+        <div class="finalScore"></div>
         <div id="name"></div>
+        <div class="displayData"></div>
     </div>
     
 
